--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kółko i Krzyżyk</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
     <h1>Kółko i Krzyżyk</h1>
@@ -12,6 +12,6 @@
     <p id="status">Ruch gracza X</p>
     <button id="restart">Restart</button>
 
-    <script src="app.js"></script>
+    <script src="./dist/app.js"></script>
   </body>
 </html>
